# la-coffeeteria-toteat-integration

./: .env.example  .gitignore  CHANGELOG.md  README.md  cloud.md  pyproject.toml
scripts/: build_reporting.sh  run_until_complete.sh
sql/: 001_init_toteat.sql  010_reporting.sql
src/toteat_integration/: cli.py  client.py  config.py  db.py  endpoints.py  monitor.py  progress.py  sync.py  timeutils.py
src/toteat_integration.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_timeutils.py
